--- a/ASC.Web/Views/Home/Index.cshtml
+++ b/ASC.Web/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
             <div class="col s12 m4">
                 <div class="icon-block">
                     <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Our Competency</h5>
+                    <h5 class="center">Tạ Gia Bảo</h5>
                     <p class="light">
                         By utilizing the elements and principles of modern
                         mechanical engineering, we are able to resolve complex technical challenges
