--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -17,9 +17,9 @@
         <li>
             <div class="user-view">
                 <div class="background blue-grey lighten-1"></div>
-                <a href="#!user"><img class="circle" src="~/images/male.png"></a>
-                <a href="#!name"><span class="white-text name">John Doe</span></a>
-                <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+                <a href="#!user"><img class="circle" src="~/images/out-transparent-52.gif"></a>
+                <a href="#!name"><span class="white-text name">Tạ Gia Bảo</span></a>
+                <a href="#!email"><span class="white-text email">2224802010927</span></a>
             </div>
         </li>
         <li>
