--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -134,3 +134,9 @@
         </div>
     </div>
 </footer>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var elems = document.querySelectorAll('.collapsible');
+        var instances = M.Collapsible.init(elems);
+    });
+</script>
