--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -140,3 +140,6 @@
         var instances = M.Collapsible.init(elems);
     });
 </script>
+@section Scripts {
+    @RenderSection("Scripts", required: false)
+}
