--- a/ASC.Web/Views/Shared/_MasterLayout.cshtml
+++ b/ASC.Web/Views/Shared/_MasterLayout.cshtml
@@ -13,6 +13,8 @@
     <link href="~/css/materialize.css" type="text/css" rel="stylesheet" media="screen, projection" />
     <link href="~/css/style.css" type="text/css" rel="stylesheet" media="screen, projection" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
+
 </head>
 <body>
         @RenderBody()
