next half but still not done yet

--- a/ASC.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ASC.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -35,7 +35,7 @@
                         <label>
                             <input asp-for="Input.RememberMe" type="checkbox" class="filled-in"/>
                             <span asp-for="Input.RememberMe">
-                                @Html.DisplayNameFor(mbox => m.Input.RememberMe)
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </span>
                         </label>
                     </p>
