--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -15,7 +15,11 @@
     <nav class="top-nav blue-grey lighten-1">
         <div class="nav-wrapper row valign-wrapper">
             <div class="col s12 valign-wrapper">
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger">
+                    <i class="material-icons">menu</i>
+                </a>
+
                 <h5><a class="page-title">Automobile Service Center</a></h5>
             </div>
         </div>
@@ -25,15 +29,15 @@
         <li>
             <div class="user-view">
                 <div class="background blue-grey lighten-1"></div>
-                <a href="#!user"><img class="circle" src="~/images/out-transparent-52.gif"></a>
-                <a href="#!name"><span class="white-text name">@currentUser.Name</span></a>
-                <a href="#!email"><span class="white-text email">@currentUser.Email</span></a>
+                <a href="#user"><img class="circle" src="~/images/out-transparent-52.gif"></a>
+                <a href="#name"><span class="white-text name">@currentUser.Name</span></a>
+                <a href="#email"><span class="white-text email">@currentUser.Email</span></a>
             </div>
         </li>
         @await Component.InvokeAsync("ASC.Web.Navigation.LeftNavigation", await navigationCache.GetNavigationCacheAsync())
     </ul>
 </header>
-<!-- Render Body-->
+<!-- Render Body -->
 <main class="secureLayout">
     <div class="row margin-bottom-0px">
         <div class="col s12">
@@ -111,5 +115,6 @@
             $('.collapsible').collapsible();
         });
     </script>
-    @RenderSection("Scripts", required: false)
 }
+
+@RenderSection("Scripts", required: false)
