--- a/ASC.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ASC.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,24 +6,23 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="container">
     <div class="row">
         <div class="col s12 m5 offset-m2">
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="row">
-                    <div class="inputfile-field col s12">
-                        <input asp-for="Input.Email" type="email" class="validate" />
+                    <div class="input-field col s12">
+                        <input asp-for="Input.Email" type="email" class="validate">
                         <label asp-for="Input.Email">
                             Email
                         </label>
-                        <span class="helper-text" data-error="wrong" data-success ="right"/>
+                        <span class="helper-text" data-error="wrong" data-success="right" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input asp-for="Input.Password" type="password" class="validate" />
+                        <input asp-for="Input.Password" type="password" class="validate">
                         <label asp-for="Input.Password">
                             Password
                         </label>
@@ -33,7 +32,7 @@
                 <div class="row padding-left-10px">
                     <p>
                         <label>
-                            <input asp-for="Input.RememberMe" type="checkbox" class="filled-in"/>
+                            <input asp-for="Input.RememberMe" type="checkbox" class="filled-in" />
                             <span asp-for="Input.RememberMe">
                                 @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </span>
@@ -51,8 +50,30 @@
                 </div>
             </form>
         </div>
+        <div class="col s12 m4 offset-m1">
+            <h5>Login using External Providers.</h5>
+            <div class="divider"></div>
+            @{var loginProviders = await SignInManager.GetExternalAuthenticationSchemesAsync();
+                if (loginProviders.Count() != 0)
+                {
+                    <form asp-area="Identity" asp-page="/Account/ExternalLogin" asproute-returnurl="@ViewData["ReturnUrl"]" method="post" class="formhorizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in loginProviders)
+                                {
+                                    <button type="submit" class="btn btndefault" name="provider" value="@provider.DisplayName" title="Log in using your @provider.DisplayName account">
+                                        @provider.DisplayName
+                                    </button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </div>
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
