--- a/ASC.Web/Views/Shared/_MasterLayout.cshtml
+++ b/ASC.Web/Views/Shared/_MasterLayout.cshtml
@@ -12,13 +12,20 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="~/css/materialize.css" type="text/css" rel="stylesheet" media="screen, projection" />
     <link href="~/css/style.css" type="text/css" rel="stylesheet" media="screen, projection" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
+    @* <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  *@
+    <!-- DataTables CSS -->
+    <link href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css"
+          type="text/css" rel="stylesheet" media="screen,projection" />
+    @* <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" /> *@
+    @* <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script> *@
+    @* <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script> *@
 
 </head>
 <body>
         @RenderBody()
-        <script scr="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <!-- DataTables JS (phải sau jQuery) -->
+        <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
         <script src="~/js/materialize.min.js"></script>
         <script src="~/js/init.js"></script>
         @RenderSection("Scripts", required: false)
