--- a/ASC.Web/Views/Shared/_MasterLayout.cshtml
+++ b/ASC.Web/Views/Shared/_MasterLayout.cshtml
@@ -3,31 +3,32 @@
 @inject IOptions<ApplicationSettings> _configurationSettings
 
 <!DOCTYPE html>
+
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@_configurationSettings.Value.ApplicationTitle</title>
-    <!-- CSS -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link href="~/css/materialize.css" type="text/css" rel="stylesheet" media="screen, projection" />
-    <link href="~/css/style.css" type="text/css" rel="stylesheet" media="screen, projection" />
-    @* <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  *@
-    <!-- DataTables CSS -->
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="~/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="~/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
     <link href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css"
           type="text/css" rel="stylesheet" media="screen,projection" />
-    @* <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" /> *@
-    @* <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script> *@
-    @* <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script> *@
 
 </head>
 <body>
-        @RenderBody()
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <!-- DataTables JS (phải sau jQuery) -->
-        <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-        <script src="~/js/materialize.min.js"></script>
-        <script src="~/js/init.js"></script>
-        @RenderSection("Scripts", required: false)
+    <!-- Render Body -->
+    @RenderBody()
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/materialize.min.js"></script>
+    <script src="~/js/init.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
